.provarCaches/00D5f000005vwGkEAI/objects/rstk__woordsrlcomp__c.object
<CustomObject>
    <description>woordsrlcomp__c: This is a &quot;linkage&quot; table which provides a way to track serialized component items to a serial parent item. These records are created when a user selects the &quot;link&quot; function on the &quot;Serial Numbers&quot; tab on the WO Workbench</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__woordsrlcomp_ordno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__woordsrlcomp_compitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__woordsrlcomp_srlseqno__c) &amp; &apos;_&apos; &amp; rstk__woordsrlcomp_lotsrlno__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__woordsrlcomp_compitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__woordsrlcomp_lotsrlno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__woordsrlcomp_div__r.rstk__sydiv_div__c + &apos; &apos; +   rstk__woordsrlcomp_site__r.rstk__sysite_site__c + &apos; &apos; +  rstk__woordsrlcomp_ordno__r.rstk__wocst_ordno__c + &apos; &apos; +  rstk__woordsrlcomp_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_comments__c</fullName>
        <inlineHelpText>Comments associated with this Serial/Lot Linkage</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_compitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Component Item Number of the serialized component.</inlineHelpText>
        <label>Component Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>WO_Serial_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division of the serialized component item.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>WO_Serial_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_lotsrlno__c</fullName>
        <inlineHelpText>This is the Component&apos;s Lot or Serial Number</inlineHelpText>
        <label>Component Lot/Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_ordno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Work Order Number of the serialized component item.</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipName>WO_Serial_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_parentref__c</fullName>
        <inlineHelpText>Reference to Parent Item&apos;s Serial (used for importing only)</inlineHelpText>
        <label>Parent Reference (for Import)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the quantity of the Component linked to a Lot Number</inlineHelpText>
        <label>Quantity Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the site of the serialized component item.</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>WO_Serial_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_srlseqno__c</fullName>
        <inlineHelpText>This is an internal number assigned by the system as the user records serial numbers</inlineHelpText>
        <label>Serial Seq No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woordsrlcomp_trackind__c</fullName>
        <inlineHelpText>This indicates whether this is a Lot(L) or Serial Number(S)</inlineHelpText>
        <label>Tracking Ind</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lot No</fullName>
                </value>
                <value>
                    <fullName>Serial No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Order Component Serial</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__woordsrlcomp_div__c</columns>
        <columns>rstk__woordsrlcomp_site__c</columns>
        <columns>rstk__woordsrlcomp_ordno__c</columns>
        <columns>rstk__woordsrlcomp_compitem__c</columns>
        <columns>rstk__woordsrlcomp_lotsrlno__c</columns>
        <columns>rstk__woordsrlcomp_srlseqno__c</columns>
        <columns>rstk__woordsrlcomp_trackind__c</columns>
        <columns>rstk__woordsrlcomp_qtyalloc__c</columns>
        <columns>rstk__woordsrlcomp_comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Work_Order_Component_Serial</fullName>
        <columns>NAME</columns>
        <columns>rstk__woordsrlcomp_div__c</columns>
        <columns>rstk__woordsrlcomp_ordno__c</columns>
        <columns>rstk__woordsrlcomp_compitem__c</columns>
        <columns>rstk__woordsrlcomp_lotsrlno__c</columns>
        <columns>rstk__woordsrlcomp_qtyalloc__c</columns>
        <columns>rstk__woordsrlcomp_srlseqno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Work Order Component Serial</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Component Serial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>